Tweak styles, add autofocus to form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Todos los todos</h1>
     <form>
-      <input type="text" name="todo" placeholder="add todo...">
+      <input type="text" name="todo" placeholder="add todo..." autofocus="true">
       <input type="submit" value="ADD">
     </form>
     <ul class="list">
