delegate toggleDone, correct done state persistance

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
   </head>
   <body>
-    <h1>Todos los todos</h1>
+    <h1>Todos los to-dos</h1>
     <form>
       <input type="text" name="todo" placeholder="add todo..." autofocus="true">
       <input type="submit" value="ADD">
