refactor renderTodo to include delete button. adjust styling accordingly

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <input type="text" name="todo" placeholder="add todo..." autofocus="true">
       <input type="submit" value="ADD">
     </form>
-    <ul class="list">
+    <section class="list">
 
-    </ul>
+    </section>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
